Added an enum to contain all the specific values for keys that are used to operate the program. This is to make the code much cleaner and more easily readable. Also allows for the controls to be updated/edited much much more easily.

--- a/TypePractice/TypePractice.vcxproj
+++ b/TypePractice/TypePractice.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Definitions.h" />
     <ClInclude Include="ListLoading.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
