--- a/TypePractice/TypePractice.vcxproj.filters
+++ b/TypePractice/TypePractice.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Definitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
