Added performance metrics that will calculate the time taken to enter an attempt for the given sentence, return it as seconds/milliseconds and also output the corresponding value for 'words per minute'.

--- a/TypePractice/TypePractice.vcxproj
+++ b/TypePractice/TypePractice.vcxproj
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClInclude Include="Definitions.h" />
     <ClInclude Include="ListLoading.h" />
+    <ClInclude Include="Timing.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
