--- a/TypePractice/TypePractice.vcxproj.filters
+++ b/TypePractice/TypePractice.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Definitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Timing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
